# Scaler-Hackathon

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.py  test_agent.py
data/: electronics_retail.json  generate_data.py  real_estate.json  restaurant_chain.json
env/: environment.py  models.py
graders/: classify_grader.py  cluster_grader.py  prompt_grader.py
server/: app.py
